<resources>
    <string name="app_name">Eat It Application</string>
    <string name="slogan">Josh Chang Leê</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_xml_buttons">XmlButtons</string>
    <string name="title_activity_program_buttons">ProgramButtons</string>

    <string name="icon_user">&#xf007;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_signup">&#xf234;</string>
    <string name="icon_readmore">&#xf178;</string>
    <string name="icon_answer">&#xf095;</string>
    <string name="icon_mute">&#xf131;</string>

    <string name="icon_like">&#xf087;</string>
    <string name="icon_share">&#xf064;</string>
    <string name="icon_follow">&#xf005;</string>

    <string name="icon_android">&#xf17b;</string>
    <string name="icon_dropbox">&#xf16b;</string>
    <string name="icon_soundcloud">&#xf1be;</string>
    <string name="icon_spotify">&#xf1bc;</string>

    <string name="icon_vine">&#xf1ca;</string>
    <string name="icon_twitter">&#xf099;</string>
    <string name="icon_tumbler">&#xf173;</string>
    <string name="icon_stackoverflow">&#xf16c;</string>
    <string name="icon_gplus">&#xf0d5;</string>
    <string name="icon_facebook">&#xf09a;</string>

    <string name="icon_entypo_facebook">&#59140;</string>

    <string name="icon_behance">&#xf1b4;</string>
    <string name="icon_dribble">&#xf17d;</string>

    <string name="icon_send">&#xf1d8;</string>
    <string name="icon_download">&#xf0ed;</string>
    <string name="icon_upload">&#xf0ee;</string>
    <string name="icon_config">&#xf085;</string>
    <string name="icon_creditcard">&#xf09d;</string>
    <string name="ghost_button_title">Ghost Button</string>
    <string name="icon_envelope"></string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="price">1,000</string>
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
</resources>
